--- a/QLXM/nbproject/project.properties
+++ b/QLXM/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/QLXM.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.sqljdbc4.jar=C:\\JAVA4\\sqljdbc4.jar
+file.reference.sqljdbc4.jar-1=D:\\laptrinhjava4\\BAI TAP JAVA4\\sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.sqljdbc4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
